Fix mobile link wrapping.

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -205,8 +205,19 @@
   max-width: 100%;
   box-shadow: inset 0 0 5px rgb(0, 3, 0);
   border: 2px solid rgba(20, 0, 0, 0.521);
-}
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 
-.tab-content a {
-  display: inline-block;
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
